Cleanup and issue fix